Fix number format in special function listing on tip chit

--- a/Core/Reporting/TipChit.rdlc
+++ b/Core/Reporting/TipChit.rdlc
@@ -864,7 +864,9 @@
                                             <TextRuns>
                                               <TextRun>
                                                 <Value>=Fields!Amount.Value</Value>
-                                                <Style />
+                                                <Style>
+                                                  <Format>#,0.00;(#,0.00);'0.00'</Format>
+                                                </Style>
                                               </TextRun>
                                             </TextRuns>
                                             <Style>
@@ -884,6 +886,7 @@
                                           <PaddingBottom>2pt</PaddingBottom>
                                         </Style>
                                       </Textbox>
+                                      <rd:Selected>true</rd:Selected>
                                     </CellContents>
                                   </TablixCell>
                                 </TablixCells>
